[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/GameFin.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/MazeFont_100.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Fonts/Montsrerrat_16.tres" type="DynamicFont" id=3]

[node name="GameFin" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Column" type="VBoxContainer" parent="CenterContainer"]
margin_left = 178.0
margin_top = 222.0
margin_right = 845.0
margin_bottom = 378.0

[node name="Label" type="Label" parent="CenterContainer/Column"]
margin_right = 667.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 2 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 6
text = "MAZE COMPLETE"
align = 1
uppercase = true

[node name="Time" type="Label" parent="CenterContainer/Column"]
margin_top = 104.0
margin_right = 667.0
margin_bottom = 125.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Your Time was: 1m 23s"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Column"]
margin_top = 129.0
margin_right = 667.0
margin_bottom = 156.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TryAgain" type="Button" parent="CenterContainer/Column/HBoxContainer"]
margin_right = 331.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Try Again"

[node name="Main Menu" type="Button" parent="CenterContainer/Column/HBoxContainer"]
margin_left = 335.0
margin_right = 667.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Main Menu"
[connection signal="button_up" from="CenterContainer/Column/HBoxContainer/TryAgain" to="." method="_on_TryAgain_button_up"]
[connection signal="button_up" from="CenterContainer/Column/HBoxContainer/Main Menu" to="." method="_on_Main_Menu_button_up"]
